# vdca-coordinator

./: README.md
central/: .clangd  .gitignore  CMakeLists.txt
central/src/: lockTracker.cpp  lockTracker.h  main.cpp  messageTypes.h  packetUtils.cpp  packetUtils.h  server.cpp  server.h
client/: CMakeLists.txt
client/src/: client.cpp  client.h  main.cpp  messageTypes.h  packetUtils.cpp  packetUtils.h
